# slack-gcal-sync

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
.junie/: guidelines.md
config/: application_config.json  logging_config.yaml
configuration/: Cargo.toml
configuration/src/: lib.rs  tests.rs
gcal_integration/: Cargo.toml
gcal_integration/src/: lib.rs  tests.rs
gcal_web_api/: Cargo.toml
gcal_web_api/src/: lib.rs  tests.rs
logging/: Cargo.toml
logging/src/: lib.rs  tests.rs
scripts/: generate_coverage_report.sh
slack_gcal_sync/: Cargo.toml
slack_integration/: Cargo.toml
slack_integration/src/: lib.rs  tests.rs
slack_web_api/: Cargo.toml
slack_web_api/src/: lib.rs  tests.rs
src/: configuration.rs  logging.rs  main.rs  tests.rs
