[workspace]
members = ["configuration", "gcal_integration", "slack_integration"]

[package]
name = "slack-gcal-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration = { path = "configuration"}
gcal_integration = { path = "gcal_integration"}
slack_integration = { path = "slack_integration"}
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.23", features = ["derive"] }
google-calendar3 = "6.0.0"
anyhow = "1.0.94"
log4rs = "1.3.0"
log = "0.4.22"
reqwest = "0.12.12"
chrono = "0.4.39"
thiserror = "2.0.9"

[dev-dependencies]
tempfile = "3.19.1"
