[workspace]
members = ["configuration", "gcal_web_api", "logging", "slack_gcal_sync", "slack_web_api"]

[package]
name = "slack-gcal-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration = { path = "configuration"}
gcal_web_api = { path = "gcal_web_api" }
slack_web_api = { path = "slack_web_api" }
logging = { path = "logging" }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.94"
log = "0.4.22"
reqwest = "0.12.12"
chrono = "0.4.39"
