[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
serde_json = "1.0.134"
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3.15.0"
