[package]
name = "configuration"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
serde_json = "1.0.145"
clap = { version = "4.5.50", features = ["derive", "env"] }
log = "0.4.28"
google-calendar3 = "6.0.0"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"
