[package]
name = "gcal_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
google-calendar3 = "6.0.0"
thiserror = "2.0.6"

[dev-dependencies]
env_logger = "0.11.6"
serde_json = "1.0.133"
mockito = "1.6.1"
rustls = { version = "0.23.20", features = ["ring"] }
tokio = "1.42.0"
rsa = "0.9.7"
