[package]
name = "gcal_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
google-calendar3 = "6.0.0"
thiserror = "2.0.9"
log = "0.4.28"

[dev-dependencies]
env_logger = "0.11.6"
serde_json = "1.0.134"
mockito = "1.6.1"
rustls = { version = "0.23.20", features = ["ring"] }
tokio = "1.43.0"
rsa = "0.9.7"
