[package]
name = "gcal_web_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
google-calendar3 = "6.0.0"
thiserror = "2.0.17"
log = "0.4.28"

[dev-dependencies]
env_logger = "0.11.8"
serde_json = "1.0.145"
mockito = "1.7.0"
rustls = { version = "0.23.34", features = ["ring"] }
tokio = "1.48.0"
rsa = "0.9.8"
