[package]
name = "slack_web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.9"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }


[dev-dependencies]
env_logger = "0.11.6"
mockito = "1.6.1"
serde_json = "1.0.136"
tokio = { version = "1.43.0", features = ["macros"] }
