[package]
name = "slack_web_api"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }


[dev-dependencies]
env_logger = "0.11.8"
mockito = "1.7.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros"] }
